--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-09  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Put the current URI in the Ctrl+L dialog
+
 2005-01-03  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-toc-pager.c:
