- Fixed messy string, #162808
* src/yelp-xslt-pager.c:
- Fixed messy string, #162808

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-01-09  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-xslt-pager.c:
+	- Fixed messy string, #162808
+
+2005-01-09  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-window.c:
 	- Put the current URI in the Ctrl+L dialog
 
