- Cleaned up string, #161777
* data/yelp.schemas.in:
- Cleaned up string, #161777

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-01-09  Shaun McCance  <shaunm@gnome.org>
 
+	* data/yelp.schemas.in:
+	- Cleaned up string, #161777
+
+2005-01-09  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-xslt-pager.c:
 	- Fixed messy string, #162808
 
