- Calling the fromt page Help Topics
* data/toc.xml.in:
* src/yelp-window.c:
- Calling the fromt page Help Topics

* src/yelp-settings.c:
* src/yelp-settings.h:
- Added prev/next page icons

* src/yelp-window.c:
- Did some work on the Find toolbar

* stylesheets/db2html.xsl.in:
- Some navigation bar work

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2005-01-10  Shaun McCance  <shaunm@gnome.org>
+
+	* data/toc.xml.in:
+	* src/yelp-window.c:
+	- Calling the fromt page Help Topics
+
+	* src/yelp-settings.c:
+	* src/yelp-settings.h:
+	- Added prev/next page icons
+
+	* src/yelp-window.c:
+	- Did some work on the Find toolbar
+
+	* stylesheets/db2html.xsl.in:
+	- Some navigation bar work
+
 2005-01-09  Shaun McCance  <shaunm@gnome.org>
 
 	* data/yelp.schemas.in:
